# recode

./: Cargo.toml  README.md
recode/: Cargo.toml
recode-derive/: Cargo.toml
recode-derive/src/: decoder.rs  encoder.rs  field.rs  lib.rs  recode.rs  util.rs
recode-derive/src/util/: mod.rs  owned_generics.rs  type.rs
recode-macros/: Cargo.toml
recode-macros/src/: lib.rs
recode-util/: Cargo.toml
recode-util/src/: lib.rs
recode-util/src/framed/: length_delimited.rs  mod.rs
recode/src/: decode.rs  encode.rs  error.rs  lib.rs
recode/src/codec/: buffer.rs  length.rs  length_prefixed.rs  mod.rs  number.rs  text.rs  ux.rs
recode/src/util/: buf.rs  context.rs  decode.rs  encode.rs  encoder.rs  mod.rs  remaining.rs  size.rs
