[package]
name = "recode-derive"
version = "0.2.3"
description = "`recode` macros. Not intended to be used directly"
keywords = ["encode", "decode", "serialize", "deserliaze", "io"]
edition.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { version = "0" }
paste = { version = "1" }
proc-macro2 = { version = "1" }
proc-macro-error = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = ["full"] }
