[package]
name = "recode-util"
version = "0.1.0"
description = "Utilities for `recode` crate"
keywords = ["framed", "codec", "encode", "decode"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["framed"]

# tokio-util `Framed*` support
framed = ["tokio-util/codec"]

[dependencies]
recode = { version = "0.5.0-alpha.3", path = "../recode" }
bytes = { version = "1" }

# optional dependencies
tokio-util = { version = "0", optional = true }
