[package]
name = "recode"
version = "0.1.0"
description = "Reusable encoding/decoding constructs for Rust"
keywords = ["encode", "decode", "serialize", "deserliaze", "i/o"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bytes = { version = "1" }
paste = { version = "1" }
thiserror = { version = "1" }

# Enable support for whole-byte types from [`ux`] crate
ux = { version = "0", optional = true }

# project dependencies
recode-derive = { version = "0", path = "../recode-derive", optional = true }

[dev-dependencies]
recode-derive = { version = "0", path = "../recode-derive" }

[features]
default = ["derive", "ux"]

# Provide `Deocder/Encoder` derive macros
derive = ["recode-derive"]
